# src/model/Emprestimo.ts
@@ -1,0 +1,9 @@
+export class Emprestimo {
+    id: number;
+    nome: string;
+
+    constructor(id?:number, nome?:string) {
+        this.id = id || 0;
+        this.nome = nome || '';
+    }
+}
